--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,9 @@
 [cloudera_master]
-
+server00.sory-consulting.com
+server01.sory-consulting.com
+server02.sory-consulting.com
 
 [cloudera_workers]
+server03.sory-consulting.com
+server04.sory-consulting.com
+server05.sory-consulting.com
