--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,12 @@
-[cloudera_master]
+[masters]
+master1 ansible_host=master1.example.com
+master2 ansible_host=master1.example.com
+master3 ansible_host=master1.example.com
 
+[workers]
+worker1 ansible_host=worker1.example.com
+worker2 ansible_host=worker2.example.com
+worker2 ansible_host=worker2.example.com
 
-[cloudera_workers]
+[cloudera_manager_node]
+master1
